--- a/style.css
+++ b/style.css
@@ -24,10 +24,20 @@ h1 {
     font-size: 5em;
 }
 
+h2 {
+    font-size: 4em;
+}
 h3 {
     font-size: 3em;
     margin-top: 15px;
 }
+
+.menssagem {
+    font-size: 1.5em;
+    margin-top: 40px;
+
+}
+ 
 
 .box{
     border: 2px solid var(--primary-color);
@@ -36,3 +46,4 @@ h3 {
     padding: 20px;
     margin: 20px;
 }
+
